backend/uploads/yaml_folder/app/fluent-bit/prd.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentbit-ingress
  namespace: fluentbit
  annotations:
    kubernetes.io/tls-acme: "false"
    certmanager.k8s.io/cluster-issuer: acm-aws
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: prd-app-intra-eks-app-alb-ekss
    alb.ingress.kubernetes.io/group.name: alb-internal-app
    alb.ingress.kubernetes.io/security-groups: sg-08b5165e42765ab7d
    alb.ingress.kubernetes.io/success-codes: "200,302"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/health"
    alb.ingress.kubernetes.io/healthcheck-port: "2020"
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:654654228951:regional/webacl/PRD-APP-INTRA-EKS-APP-WAF/2d40298d-b31c-4edf-b5ee-b6c9c928a17e
spec:
  ingressClassName: alb-internal-app
  rules:
  - host: fluent-app.fms.itfs.lta.gov.sg
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: fluentbit-fluent-bit
            port:
              number: 443
  tls:
    - hosts:
        - fluent-app.fms.itfs.lta.gov.sg
      secretName: fluentbit-app-tls
