backend/uploads/yaml_folder/app/fluent-bit/uat.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentbit-ingress
  namespace: fluentbit
  annotations:
    kubernetes.io/tls-acme: "false"
    certmanager.k8s.io/cluster-issuer: acm-aws
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: uat-app-intra-eks-app-alb-eks
    alb.ingress.kubernetes.io/group.name: alb-internal-app
    alb.ingress.kubernetes.io/security-groups: sg-0e94cb42970e1c3d9
    alb.ingress.kubernetes.io/success-codes: "200,302"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/health"
    alb.ingress.kubernetes.io/healthcheck-port: "2020"
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:381491900351:regional/webacl/UAT-APP-INTRA-EKS-APP-WAF/9f041adc-078f-44f9-88c0-586f18144a2c
spec:
  ingressClassName: alb-internal-app
  rules:
  - host: fluent-app.fms-uat.itfs.lta.gov.sg
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: fluentbit-fluent-bit
            port:
              number: 443
  tls:
    - hosts:
        - fluent-app.fms-uat.itfs.lta.gov.sg
      secretName: fluentbit-app-tls
